support starting/stopping compose
