# spec/openapi.yaml
@@ -10,7 +10,7 @@ info:
     email: max.goltzsche@gmail.com
 
 servers:
-- url: ""
+- url: "/api"
 
 tags:
 - name: apps
@@ -92,8 +92,8 @@ paths:
             schema:
               $ref: "#/components/schemas/App"
       responses:
-        "200":
-          description: App updated
+        "202":
+          description: App update accepted. The operation will be completed asynchronously.
           content:
             "application/json":
               schema:
@@ -108,6 +108,12 @@ paths:
           description: |
             Conflict: the app was changed on the server by another client meanwhile.
             The client should obtain the latest state from the server, apply its changes again and retry the update operation.
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/schemas/Error"
+        "500":
+          description: Internal Server Error
           content:
             "application/json":
               schema:
@@ -134,6 +140,7 @@ components:
       - items
     App:
       type: object
+      description: Represents a set of capabilities that a host provides.
       properties:
         metadata:
           $ref: "#/components/schemas/Metadata"
@@ -148,23 +155,26 @@ components:
     AppSpec:
       type: object
       properties:
+        enabled:
+          type: boolean
         activeProfile:
           type: string
       required:
+      - enabled
       - activeProfile
     AppStatus:
       type: object
       properties:
         node:
           type: string
-        phase:
-          $ref: "#/components/schemas/Phase"
+        state:
+          $ref: "#/components/schemas/AppState"
         containers:
           type: array
           items:
             $ref: "#/components/schemas/Container"
       required:
-      - phase
+      - state
     Container:
       type: object
       properties:
@@ -177,18 +187,20 @@ components:
     ContainerStatus:
       type: object
       properties:
-        phase:
-          $ref: "#/components/schemas/Phase"
+        state:
+          $ref: "#/components/schemas/AppState"
         message:
           type: string
       required:
-      - phase
-    Phase:
+      - state
+    AppState:
       type: string
       enum:
+      - unknown
       - starting
       - running
-      - failed
+      - error
+      - exited
     Error:
       type: object
       properties:
@@ -213,8 +225,6 @@ components:
       properties:
         action:
           $ref: "#/components/schemas/EventAction"
-        type:
-          type: string
         object:
           $ref: "#/components/schemas/EventObject"
       required:
@@ -224,7 +234,7 @@ components:
     EventAction:
       type: string
       enum:
-      - create
+      - create # might occur twice
       - update
       - delete
     EventObject:
